--- a/main/@moderator/moderator.html
+++ b/main/@moderator/moderator.html
@@ -94,7 +94,7 @@
         gtag('config', 'G-V1QJVQMYF1')
     </script>
     <script type="module" crossorigin="" src="/main/@moderator/script.js"></script>
-    <link rel="stylesheet" href="/style-0.css">
+    <link rel="stylesheet" href="/main/@moderator/style-0.css">
 </head>
 
 <body>
